2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/m68hc11.exp: Execute the new tests.
	* gas/m68hc11/abi.s: New test for abi elf flags.
	* gas/m68hc11/abi-m68hc11-32-64.d: Test for 32-bit int, 64-bit float.
	* gas/m68hc11/abi-m68hc11-16-64.d: Test for 16-bit int, 64-bit float.
	* gas/m68hc11/abi-m68hc11-32-32.d: Test for 32-bit int, 32-bit float.
	* gas/m68hc11/abi-m68hc11-16-32.d: Test for 16-bit int, 32-bit float.

2003-07-15  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/rm7000.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2003-07-10  Jakub Jelinek  <jakub@redhat.com>

	* gas/cfi/cfi-ppc-1.s: New test.
	* gas/cfi/cfi-ppc-1.d: New test.
	* gas/cfi/cfi-s390-1.s: New test.
	* gas/cfi/cfi-s390-1.s: New test.
	* gas/cfi/cfi-s390x-1.s: New test.
	* gas/cfi/cfi-s390x-1.s: New test.
	* gas/cfi/cfi.exp: Run them.

2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2002-02-20  Alexandre Oliva  <aoliva@redhat.com>
	* gas/mn10300/am33-2.c (d8pcsec): PC-relative relocations within
	text sections don't decay to section+offset.
	* gas/mn10300/am33-2.d: Rebuilt.
	2000-08-15  Eric Christopher  <echristo@cygnus.com>
	* gas/mn10300/am33-2.c (d8pcsec): New Function
	(condjmp): Adjust testcase for TC_LINKRELAX_FIXUP
	functionality.
	* gas/mn10300/am33-2.d: Regenerate
	2000-05-24  Alexandre Oliva  <aoliva@cygnus.com>
	* gas/mn10300/am33-2.c (d8pcoff): Likewise.
	* gas/mn10300/am33-2.d: Rebuilt.
	2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>
	* gas/mn10300/am33-2.c (main): Changed `.am332' to `.am33_2'.
	Replaced `AM33 2.0' with `AM33/2.0'.
	* gas/mn10300/am33-2.d, gas/mn10300/am33-2.s: Rebuilt.
	2000-03-31  Alexandre Oliva  <aoliva@cygnus.com>
	* gas/mn10300/am33-2.c: New file, that generated...
	* gas/mn10300/am33-2.s, gas/mn10300/am33-2.d: New files.
	* gas/mn10300/basic.exp: Test am33-2.

2003-07-08  Chris Demetriou  <cgd@broadcom.com>

	* gas/testsuite/gas/mips/mips.exp: Make sure that branch-misc-2 is