@@ -1,5 +1,5 @@
 #as: -a32 -m601 -maltivec
-#objdump: -Dr
+#objdump: -dr
 #name: AltiVec tests
 
 .*: +file format elf32-powerpc
@@ -13,4 +13,3 @@ Disassembly of section \.text:
    c:	7e 08 3a ac 	dstt	r8,r7,0
   10:	7c 65 32 ec 	dstst	r5,r6,3
   14:	7e 44 2a ec 	dststt	r4,r5,2
-Disassembly of section \.data:
