@@ -1,3 +1,8 @@
+2003-07-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-powerpc/tlsexe32.d: Update.
+	* ld-powerpc/tlsso32.d: Update.
+
 2003-07-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-powerpc/tlsexe.r: .sbss is NOBITS, not PROGBITS.
